# a4-website-backend

./: Makefile  README.md  get-poetry.py  pyproject.toml  whole.json
src/: config.ini
src/backend/: admin.py  urls.py
src/backend/migrations/: 0001_initial.py  0002_faq_settings.py  0002_faqitem_settings.py  0002_sponsor.py  0003_alter_setting_type.py  0003_alter_settings_type.py  0003_auto_20210914_1910.py  0004_alter_setting_type.py  0004_auto_20211018_2047.py  0005_alter_setting_type.py  0005_tag.py  0006_alter_setting_type.py  0006_auto_20211106_2047.py  0006_auto_20211219_1121.py  0006_department_partner_alter_setting_type.py  0007_auto_20211106_2053.py
src/backend/models/: ArticleItem.py  article.py  contact.py  contactsitem.py  department.py  example.py  faq.py  faqitem.py  menu.py  partner.py  project.py  settings.py  sponsor.py  student.py  tag.py
src/backend/serializers/: ArticleItem.py  article.py  contact.py  department.py  example.py  faq.py  faqitem.py  menu.py  partner.py  project.py  settings.py  sponsor.py  student.py  tag.py
src/backend/views/: ArticleItem.py  article.py  contact.py  department.py  example.py  faq.py  faqitem.py  menu.py  partner.py  settings.py  sponsor.py  student.py  tag.py
src/main/: settings.py  urls.py
